<resources>
    <string name="app_name">Crease</string>
    <string name="title_activity_bottom">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_explore">Explore</string>
    <string name="title_add">Add</string>
    <string name="title_notification">Notification</string>
    <string name="title_profile">Profile</string>
    <string name="username">Username</string>
    <string name="bookname">BookName</string>
    <string name="crease">Crease</string>
    <string name="record_the_days_reading_books">Record the days reading books</string>

    <string name="new_post_prompt_title">New Post</string>
    <string name="new_post_reminder">Reminder</string>
    <string name="edit_post_cancel">Cancel</string>
    <string name="edit_post_book_title">Book Title</string>
    <string name="edit_post_publish">Post</string>


    <string name="todo">TODO</string>
    <string name="photo">photo</string>
    <string name="capture_image">TAKE PHOTOS \nCAMERA</string>
    <string name="get_from_gallery">OPEN ALBUM \nPHOTO</string>
    <string name="got_it">Got It</string>
    <string name="book_title">Book Title</string>
    <string name="description">Description</string>
    <string name="what_s_on_your_thought">What\'s on your thought?…</string>

    <string name="cancel_post">Cancel Post</string>
    <string name="show_tip">Show Tip</string>
    <string name="post_tips">Post Tips</string>
    <string name="photo_tips">Photo Tips</string>

    <string name="don_t_have_an_account_sign_up">Don\'t have an account? <font color='#75daad'><u>Sign up!</u></font></string>
    <string name="already_have_an_account_log_in">Already have an account? <font color='#75daad'><u>Log In</u></font></string>
    <string name="now_nrecord_nyour_reading_time">Now \nRecord \nYour reading time</string>
    <string name="register">Register</string>
    <string name="login">Log In</string>
    <string name="email">Email: xxx@gmail.com</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>

    <string name="add_a_comment">Say something …</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="edit_post_4_tips">Share a quote \nWrite s Review \nAny moment \nAny feeling</string>
    <string name="take_photo_3_tips"><b>Photo Idea Tips</b>\nA book cover \nAny paragraph \nAny reading moment \n \n<b>Photo Taking Tips</b>\nClear and readable photos\n Flat book page \nA brighter place</string>
    <string name="rotate">rotate</string>

    <string name="posts">posts</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="liked">liked</string>

    <string name="post">Post</string>
    <string name="search_for_friends_on_crease">Search for friends on Crease</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save">SAVE</string>

    <string name="more">more</string>
    <string name="saved">SAVED</string>

    <string name="random">Random</string>
    <string name="upload">Upload</string>
    <string name="bio">Bio</string>
    <string name="_1_choose_a_profile_image_to_represent_yourself">1. Choose a profile image to represent yourself</string>
    <string name="_2_give_one_sentence_to_describe_yourself">2. Give one sentence to describe yourself</string>
    <string name="let_other_book_lovers_know_you_better">Let other book lovers know you better</string>
    <string name="looking_good">Looking Good!</string>
    <string name="introduce_myself">Introduce myself</string>
    <string name="stop_showing">stop showing</string>


</resources>