<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:enabled="true"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_explore"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/title_explore" />

    <item
        android:id="@+id/navigation_add"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_add_circle_outline_24"
        android:title="@string/title_add" />

    <item
        android:id="@+id/navigation_favorite"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_favorite_border_24"
        android:title="@string/title_favorite" />

    <item
        android:id="@+id/navigation_profile"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_perm_identity_24"
        android:title="@string/title_profile" />

</menu>