<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/colorPrimary"
    android:padding="8dp"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/open_book"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginTop="0dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/open_book" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:src = "@drawable/ic_logo"
            android:contentDescription="@string/app_name"/>

    </LinearLayout>

    <EditText
        android:id="@+id/email_register"
        android:layout_width="296dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:padding="8dp"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:background="@drawable/edit_text_normal"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/colorLightGreen"
        android:autofillHints="" />

    <EditText
        android:id="@+id/password_register"
        android:layout_width="296dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:maxLines="1"
        android:padding="8dp"
        android:gravity="center"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:background="@drawable/edit_text_normal"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/colorLightGreen"
        android:autofillHints="" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="296dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/login"
        android:background="@drawable/take_photo_album"
        android:fontFamily="@font/montserrat_bold" />

    <TextView
        android:id="@+id/signup_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/don_t_have_an_account_sign_up"
        android:fontFamily="@font/montserrat"
        android:textSize="16sp" />

</LinearLayout>
