<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:rowCount="1"
        android:columnCount="3"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/edit_post_cancel"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:src="@drawable/ic_baseline_close_24"
            android:contentDescription="@string/cancel_post" />

        <TextView
            android:id="@+id/edit_post_new_post_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_column="1"
            android:layout_columnWeight="3"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/new_post_prompt_title"
            android:textSize="28sp" />

        <ImageView
            android:id="@+id/edit_post_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:src="@drawable/ic_baseline_info_24"
            android:contentDescription="@string/show_tip" />

    </GridLayout>

    <ImageView
        android:id="@+id/edit_post_photo_add"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_tempura"
        android:contentDescription="@string/capture_image" />


    <EditText
        android:id="@+id/edit_post_enter_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:autofillHints=""
        android:background="@null"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/book_title"
        android:inputType="textPersonName"
        android:paddingStart="16dp"
        android:paddingTop="1dp"
        android:paddingEnd="1dp"
        android:textStyle="italic"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_post_photo_add" />

    <View
        style="@style/Divider"
        android:id="@+id/edit_post_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/edit_post_enter_title"
        app:layout_constraintStart_toStartOf="parent"/>


    <EditText
        android:id="@+id/edit_post_description"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:layout_marginBottom="283dp"
        android:autofillHints=""
        android:background="@drawable/edit_post_input_background"
        android:gravity="top|left"
        android:hint="@string/what_s_on_your_thought"
        android:inputType="textMultiLine"
        android:lines="8"
        android:maxLines="10"
        android:minHeight="120dp"
        android:minLines="6"
        android:overScrollMode="always"
        android:paddingStart="16dp"
        android:paddingTop="1dp"
        android:paddingEnd="1dp"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_post_enter_title" />

    <Button
        android:id="@+id/edit_post_submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_post_button"
        android:fontFamily="sans-serif-black"
        android:text="@string/edit_post_publish"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>