<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/slideLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="128dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_tempura" />

    <TextView
        android:id="@+id/slideApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/slideLogo"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="0dp"
        android:fontFamily="@font/bangers"
        android:text="@string/crease"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="56sp" />

    <TextView
        android:id="@+id/slideSlogan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/slideApp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="0dp"
        android:fontFamily="casual"
        android:text="@string/record_the_days_reading_books"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="24sp" />



</RelativeLayout>