<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@null"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="440dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal"
                android:gravity="center"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/tip_logo"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"
                    android:src="@mipmap/ic_launcher_round" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_gravity="center"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/photo_tips"
                    android:textAlignment="center"
                    android:textSize="24sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/tip_description"
                android:layout_width="match_parent"
                android:layout_height="227dp"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:lines="12"
                android:maxLines="12"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:text="@string/take_photo_3_tips"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/tip_close"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:background="@drawable/take_photo_album"
                    android:fontFamily="@font/montserrat_bold"
                    android:gravity="center"
                    android:text="@string/got_it"
                    android:textColor="@color/colorPrimaryDark" />

                <Button
                    android:id="@+id/tip_no_more_reminder"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:background="@drawable/take_photo_album"
                    android:fontFamily="@font/montserrat_bold"
                    android:gravity="center"
                    android:text="@string/stop_showing"
                    android:textColor="@color/colorPrimaryDark" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>