<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!--  the image view for edit post  -->
    <ImageView
        android:id="@+id/more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_more"
        android:layout_margin="16dp"
        android:contentDescription="@string/more"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageProfile"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="10dp"/>

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingStart="8dp"
                android:paddingEnd="40dp"
                android:textSize="16sp"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="@color/colorBlack"/>

        </androidx.appcompat.widget.LinearLayoutCompat>


        <ImageView
            android:id="@+id/postImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/capture_image"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <ImageView
                android:id="@+id/like"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_like"
                android:contentDescription="@string/liked"/>

            <ImageView
                android:id="@+id/comment"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_comment"
                android:layout_toEndOf="@id/like"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/add_a_comment"/>

            <ImageView
                android:id="@+id/save"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_save"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/save"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/likes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:paddingStart="2dp"
            android:paddingEnd="16dp"
            android:fontFamily="@font/montserrat"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"/>

        <TextView
            android:id="@+id/bookName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:paddingStart="2dp"
            android:paddingEnd="16dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/colorBlack"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:paddingStart="2dp"
            android:paddingEnd="16dp"
            android:text="@string/description"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/colorGray"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:paddingStart="2dp"
            android:paddingEnd="16dp"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/colorGray"/>

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:paddingStart="2dp"
            android:paddingEnd="16dp"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/colorGray"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>