<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@null"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        app:cardBackgroundColor="@color/colorPrimary"
        android:layout_alignParentTop ="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal"
                android:gravity="center"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/tip_logo"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"
                    android:src="@mipmap/ic_launcher_round" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_gravity="center"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/post_tips"
                    android:textAlignment="center"
                    android:textSize="24sp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:textSize="16sp"
                android:fontFamily="@font/montserrat"
                android:text="@string/edit_post_4_tips"
                android:gravity="center"
                android:lines="6"
                android:maxLines="8"
                android:id="@+id/tip_description"/>

            <Button
                android:id="@+id/tip_close"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:layout_gravity="center"
                android:background="@drawable/take_photo_album"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center"
                android:text="@string/got_it"
                android:textColor="@color/colorPrimaryDark"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>