<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".TakePhotoActivity">

    <!--  Image view in which image will be set  -->
<!--    android:layout_width="624dp"-->
<!--    android:layout_height="936dp"-->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:clickable="true"
        android:focusable="true" />


<!--    <ImageView-->
<!--        android:id="@+id/take_photo_bg"-->
<!--        android:layout_width="624dp"-->
<!--        android:layout_height="936dp"-->

<!--        android:src="#80000000"-->
<!--        android:scaleType="centerCrop"-->
<!--        android:layout_alignParentBottom="true"-->
<!--        android:contentDescription="@string/capture_image"/>-->

    <TextView
        android:id="@+id/textView"
        android:layout_width="305dp"
        android:layout_height="119dp"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/now_nrecord_nyour_reading_time"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/take_photo_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/show_tip"
        android:src="@drawable/ic_baseline_info_24"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/textView" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_weight="1"
        android:columnCount="1"
        android:rowCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <!--  button to capture image  -->

        <Button
            android:id="@+id/capture_image_btn"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:background="@drawable/take_photo_button"
            android:fontFamily="@font/montserrat_bold"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/capture_image"
            android:textAlignment="textStart"
            android:textColor="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/get_from_gallery_btn"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_marginTop="16dp"
            android:background="@drawable/take_photo_album"
            android:fontFamily="@font/montserrat_bold"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/get_from_gallery"
            android:textAlignment="textStart"
            android:textColor="@color/colorPrimaryDark" />

    </GridLayout>


    <ImageView
        android:id="@+id/image_view"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:padding="1dp"
        android:contentDescription="@string/capture_image"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/gridLayout" />

    <Button
        android:id="@+id/take_photo_ok"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/take_photo_ok_button"
        android:drawableStart="@drawable/ic_baseline_done_all_24"
        android:fontFamily="@font/montserrat_bold"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="@+id/image_view"
        app:layout_constraintStart_toStartOf="@+id/image_view"
        app:layout_constraintTop_toBottomOf="@+id/image_view" />


</androidx.constraintlayout.widget.ConstraintLayout>